--- a/website/style.css
+++ b/website/style.css
@@ -4,48 +4,65 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #24252A;
     font-family: 'Tilt Neon', cursive;
     font-weight: 500;
     font-size: 20px;
+    color: antiquewhite;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+html::-webkit-scrollbar{
+    display: none;
+}
+
+body{
+    background-color: #24252A;
+}
+
+/* THIS IS A HEADER SECTION */
+
+header{
+    position: fixed;
+    top: 0;
+    display: flex;
+    width:100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px;
+    background-color: #1d1f26;
+    box-shadow:  0px 3px 15px black;
 }
 
 li, a{
     text-decoration: none;
-    color: antiquewhite;
-}
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-    background-color: #1d1f26 !important;
-    box-shadow:  0px 3px 15px black;
 }
 
 .logo{
     cursor: pointer;
 }
 
-.nav-links{
+.navigation-links{
     list-style: none;
 }
 
-.nav-links li{
+.navigation-links li{
     display: inline-block;
     padding: 20px;
     letter-spacing: 4px;
+    line-height: 200%;
 }
 
-.nav-links li a{
+.navigation-links li a{
     padding:10px;
     border-radius: 2px;
 }
 
-.nav-links li a:hover{
+.navigation-links li a:hover{
     color:#24252A;
-    background-color: antiquewhite;
+    background-color: #44b3e3;
     transition: 0.7s ease;
 }
 
@@ -55,6 +72,146 @@ header{
     border-radius: 50%;
 }
 
+/* THIS IS A MAIN SECTION */
+
+#home{
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 80%;
+}
+
+#home h2{
+    font-weight: bolder;
+    color: #44b3e3;
+}
+
+#home .article{
+    display: flex;
+    margin-top: 5%;
+    padding: 30px 10%;
+    flex-wrap: wrap;
+    border-radius: 5px;
+}
+
+#home .article .description{
+    margin-left: 2%;
+    margin-top: 1%;
+}
+
+#about-us{
+    margin-top: 2%;
+}
+
+#about-us h1{
+    text-align: center;
+    color: #44b3e3;
+    margin-bottom: 1%;
+}
+
+#about-us .article{
+    display: flex;
+    justify-content: space-between;
+    width:50%;
+    margin: 0 auto;
+}
+
+#about-us .article .description{
+    width: 70%;
+    line-height: 30px;
+    letter-spacing: 2px;
+}
+
+#about-us .article img{
+    width: 25%;
+}
+
+#contact{
+    margin-top: 2%;
+}
+
+#contact h1{
+    text-align: center;
+    color: #44b3e3;
+    margin-bottom: 1%;
+}
+
+#contact form{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+#contact input[type=email]{
+    background-color: #1d1f26;
+    color:antiquewhite;
+    border: 0.5px solid black;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+}
+
+#contact textarea{
+    width:25%;
+    background-color: #1d1f26;
+    border: 0.5px solid black;
+}
+
+#contact input[type=submit]{
+    color:#60cefd;
+    padding:10px;
+    background-color: #1d1f26;
+    border: 0.5px solid black;
+    border-radius: 5px;
+}
+
+#contact input[type=submit]:hover{
+    cursor: pointer;
+    background-color: #60cefd;
+    color: black;
+    transition: all 0.5s ease;
+}
+
+/*THIS IS FOOTER SECTION*/
+
+footer{
+    height: auto;
+    width: 100%;
+    margin-top: 2%;
+    background-color: #1d1f26;
+}
+
+footer .content h2{
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+footer .content{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    
+}
+
+footer .content .social{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    gap: 2em;
+}
+
+footer .content .social a i{
+    font-size: 30px;
+}
+
+footer .content .social a i:hover{
+    color: #44b3e3;
+}
 
 
 
