--- a/website/style.css
+++ b/website/style.css
@@ -22,11 +22,37 @@ body{
     background-color: #24252A;
 }
 
+/* THIS IS A MODIFIED BUTTON */
+
+#toTopButton{
+    display: none;
+    position: fixed;
+    right: 30px;
+    bottom: 20px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #1d1f26;
+    color: antiquewhite;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+    font-size: 15px;
+}
+
+#toTopButton i{
+    color: inherit;
+}
+
+#toTopButton:hover{
+    background-color: #44b3e3;
+    color: #1d1f26;
+    transition: 0.5s ease;
+}
+
 /* THIS IS A HEADER SECTION */
 
 header{
-    position: fixed;
-    top: 0;
     display: flex;
     width:100%;
     justify-content: space-between;
@@ -63,7 +89,7 @@ li, a{
 .navigation-links li a:hover{
     color:#24252A;
     background-color: #44b3e3;
-    transition: 0.7s ease;
+    transition: 0.5s ease;
 }
 
 .logo{
@@ -74,20 +100,18 @@ li, a{
 
 /* THIS IS A MAIN SECTION */
 
+#content-main{
+    margin-top: 1%;
+}
+
 #home{
     justify-content: space-between;
     margin: 0 auto;
     width: 80%;
 }
 
-#home h2{
-    font-weight: bolder;
-    color: #44b3e3;
-}
-
 #home .article{
     display: flex;
-    margin-top: 5%;
     padding: 30px 10%;
     flex-wrap: wrap;
     border-radius: 5px;
@@ -98,14 +122,20 @@ li, a{
     margin-top: 1%;
 }
 
+/* ABOUT US*/
+
 #about-us{
     margin-top: 2%;
 }
 
 #about-us h1{
     text-align: center;
-    color: #44b3e3;
     margin-bottom: 1%;
+}
+
+h1, h2{
+    font-weight: bolder;
+    color: #44b3e3;
 }
 
 #about-us .article{
@@ -123,7 +153,10 @@ li, a{
 
 #about-us .article img{
     width: 25%;
+    border-radius: 5px;
 }
+
+/* CONTACT */
 
 #contact{
     margin-top: 2%;
@@ -140,7 +173,15 @@ li, a{
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    margin: 0 auto;
+    gap: 15px;
+    width:25%;
+}
+
+#contact form div{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 #contact input[type=email]{
@@ -148,33 +189,35 @@ li, a{
     color:antiquewhite;
     border: 0.5px solid black;
     border-radius: 5px;
+    width:60%;
     text-align: center;
     padding: 5px;
 }
 
-#contact textarea{
-    width:25%;
-    height: 30rem;
-    background-color: #1d1f26;
-    border: 0.5px solid black;
-}
-
 #contact input[type=submit]{
     color:#60cefd;
-    padding:10px;
+    padding:5px;
     background-color: #1d1f26;
     border: 0.5px solid black;
     border-radius: 5px;
+    width:35%;
+}
+
+#contact textarea{
+    width:100%;
+    height: 20rem;
+    background-color: #1d1f26;
+    border: 0.5px solid black;
 }
 
 #contact input[type=submit]:hover{
     cursor: pointer;
     background-color: #60cefd;
     color: black;
-    transition: all 0.5s ease;
+    transition: 0.5s ease;
 }
 
-/*THIS IS FOOTER SECTION*/
+/* THIS IS FOOTER SECTION */
 
 footer{
     height: auto;
@@ -212,6 +255,7 @@ footer .content .social a i{
 
 footer .content .social a i:hover{
     color: #44b3e3;
+    transition: 0.5s ease;
 }
 
 
