--- a/website/style.css
+++ b/website/style.css
@@ -36,6 +36,7 @@ body{
     color: antiquewhite;
     cursor: pointer;
     padding: 15px;
+    border: 0.5px solid antiquewhite;
     border-radius: 50%;
     font-size: 15px;
 }
@@ -47,6 +48,7 @@ body{
 #toTopButton:hover{
     background-color: #44b3e3;
     color: #1d1f26;
+    border-color: #1d1f26;
     transition: 0.5s ease;
 }
 
