--- a/website/style.css
+++ b/website/style.css
@@ -7,7 +7,6 @@
     font-family: 'Tilt Neon', cursive;
     font-weight: 500;
     font-size: 20px;
-    color: antiquewhite;
 }
 
 html{
@@ -20,7 +19,9 @@ html::-webkit-scrollbar{
 
 body{
     background-color: #24252A;
+    color: antiquewhite;
 }
+
 
 /* THIS IS A MODIFIED BUTTON */
 
@@ -28,7 +29,7 @@ body{
     display: none;
     position: fixed;
     right: 30px;
-    bottom: 20px;
+    top: 30px;
     z-index: 99;
     border: none;
     outline: none;
@@ -52,6 +53,62 @@ body{
     transition: 0.5s ease;
 }
 
+/* THIS IS A NIGHT-MODE SWITCH*/
+
+
+.mode-switch input{
+    visibility: hidden;
+    width: 0;
+    height: 0;
+}
+
+.mode-switch label{
+    width: 50px;
+    height: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: rgb(92, 92, 92);
+    border-radius: 100px;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.mode-switch label:after{
+    content: "";
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    background-color: #25beff;
+    top: 2.5px;
+    left: 2.5px;
+    border-radius: 15px;
+    transition: 0.2s ease;
+}
+
+.mode-switch input:checked + label{
+    background-color: #24252A;
+}
+
+.mode-switch input:checked + label:after{
+    left:45px;
+    transform: translateX(-100%);
+    background-color: antiquewhite;
+}
+
+.mode-switch label:active:after{
+    width:25px;
+}
+
+.mode-switch input:checked + header{
+    background: white !important;
+}
+
+.mode-switch #mode-toggle{
+    display: inline-block;
+    width:20px;
+    height: 20px;
+}
+
 /* THIS IS A HEADER SECTION */
 
 header{
@@ -66,6 +123,7 @@ header{
 
 li, a{
     text-decoration: none;
+    color: antiquewhite;
 }
 
 .logo{
