--- a/website/style.css
+++ b/website/style.css
@@ -294,8 +294,10 @@ h1, h2{
 #contact textarea{
     width:100%;
     height: 20rem;
+    padding:5px;
     background-color: #1d1f26;
     border: 0.5px solid black;
+    border-radius: 5px;
 }
 
 #contact input[type=submit]:hover{
