--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -292,6 +292,16 @@ h1, h2{
     width:35%;
 }
 
+#contact .subject{
+    width:100%;
+    color: inherit;
+    padding:5px;
+    background-color: #1d1f26;
+    border: 0.5px solid black;
+    border-radius: 5px;
+    text-align: center;
+}
+
 #contact textarea{
     width:100%;
     height: 20rem;
@@ -345,10 +355,27 @@ footer .content .social a i{
     font-size: 30px;
 }
 
-footer .content .social a i:hover{
-    color: #44b3e3;
-    transition: 0.5s ease;
-}
+    /* THIS IS FOOTERS SOCIAL HOVER STYLES */
+
+    footer .content .social a .fa-square-facebook:hover{
+        color: #44b3e3;
+        transition: 0.5s ease;
+    }
+
+    footer .content .social a .fa-instagram:hover{
+        color: #e03b64;
+        transition: 0.5s ease;
+    }
+
+    footer .content .social a .fa-google-plus-g:hover{
+        color: #dfd224;
+        transition: 0.5s ease;
+    }
+
+    footer .content .social a .fa-youtube:hover{
+        color: #ff0000;
+        transition: 0.5s ease;
+    }
 
 
 
